# aiogram-jinja-ui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: main.py
examples/templates/: layout.html
examples/templates/pages/: progress.html  start.html
src/aiogram_jinja_ui/: __init__.py  engine.py  exceptions.py  extension.py  manager.py  parser.py
tests/: test_smoke.py
