[tool.poetry]
name = "aiogram-jinja-ui"
version = "1.0.0"
description = "Production-grade Jinja2 UI rendering engine for aiogram with keyboard DSL and session sync"
authors = ["dEN5 <moyadres_1@mail.ru>"]
license = "MIT"
homepage = "https://github.com/dEN5-tech/aiogram-jinja-ui"
repository = "https://github.com/dEN5-tech/aiogram-jinja-ui"
documentation = "https://github.com/dEN5-tech/aiogram-jinja-ui#readme"
keywords = ["aiogram", "jinja2", "telegram", "bot", "ui", "keyboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
packages = [{include = "aiogram_jinja_ui", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
aiogram = "==3.25.0"
Jinja2 = "^3.1.0"
matplotlib = "^3.9.0"
dotenvy = "^0.2.0"
requests = "^2.32.5"
aiohttp = "^3.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
